--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,8 @@ deploy:
   domain: palutena
   on: release
   skip_cleanup: true
+after_success:
+  - git config --global user.email "travis@localhost.localdomain"
+  - git config --global user.name "Travis CI"
+  - git add --all
+  - git commit -am "Travis change"
